@@ -15,6 +15,7 @@
  6-Feb-2019  - V0.21 Add support for gzip compression as part of serializing mmCIF files,
                      add vrpt-xml-to-cif option and supporting method __deserializeVrptToCif()
  6-Mar-2019  - V0.22 Update installation dependencies and documentation
+ 9-Mar-2019  - V0.23 Add implementations for stubbed out remote access.
 #
 
 
